--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.18.0",
+    "react-transition-group": "^4.4.5",
     "realm-web": "^2.0.0",
     "redux-saga": "^1.2.3",
     "sort-by": "^1.2.0"
@@ -34,6 +35,7 @@
     "@testing-library/user-event": "^14.2.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.8",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
