--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
