--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.16.7",
     "vitest": "^0.30.1"
   },
   "eslintConfig": {
